Clean env.example from sensitive tokens

--- a/env.example
+++ b/env.example
@@ -1,16 +1,32 @@
-# Database
-DATABASE_URL="postgresql://username:password@localhost:5432/sensay_db"
+# ==============================================
+# SHOPPY SENSAY - ENVIRONMENT CONFIGURATION
+# ==============================================
 
-# Sensay API
+# Database Configuration
+DATABASE_URL="postgresql://username:password@localhost:5432/shoppys_db"
+
+# Sensay API Configuration
 SENSAY_API_KEY="your_sensay_api_key_here"
 SENSAY_API_URL="https://api.sensay.io"
 
-# JWT Secret
+# Authentication
 JWT_SECRET="your_jwt_secret_here"
 
-# Shopify API
+# Shopify Configuration
 SHOPIFY_STORE_DOMAIN="your-store.myshopify.com"
 SHOPIFY_ACCESS_TOKEN="your_shopify_access_token_here"
 
 # Environment
-NODE_ENV="production"
+NODE_ENV="development"
+
+# ==============================================
+# SETUP INSTRUCTIONS
+# ==============================================
+#
+# 1. Copy this file to .env.local for development
+# 2. Replace all placeholder values with your actual credentials
+# 3. Add .env.local to your .gitignore file
+# 4. For production, set environment variables on your hosting platform
+# 5. Regularly rotate sensitive tokens and passwords
+#
+# ==============================================
