--- a/vercel.json
+++ b/vercel.json
@@ -1,36 +1,12 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/index.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/index.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/api/index.js"
-    }
-  ],
+  "framework": "nextjs",
+  "regions": ["sin1"],
   "env": {
     "NODE_ENV": "production"
   },
-  "functions": {
-    "api/index.js": {
-      "maxDuration": 30
-    }
-  },
-  "regions": ["sin1"],
-  "framework": null
+  "buildCommand": "cd backend-nextjs && npm run build",
+  "outputDirectory": "backend-nextjs/.next",
+  "installCommand": "cd backend-nextjs && npm install",
+  "devCommand": "cd backend-nextjs && npm run dev"
 }
