--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -33,12 +33,8 @@
   ],
   "headers": [
     {
-      "source": "/assets/(.*)",
+      "source": "/assets/(.*\\.js)",
       "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        },
         {
           "key": "Content-Type",
           "value": "application/javascript"
@@ -46,7 +42,7 @@
       ]
     },
     {
-      "source": "/(.*\\.css)",
+      "source": "/assets/(.*\\.css)",
       "headers": [
         {
           "key": "Content-Type",
@@ -55,8 +51,5 @@
       ]
     }
   ],
-  "regions": ["sin1"],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  "regions": ["sin1"]
 }
